--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".NovelApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +14,7 @@
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
         <meta-data
-            android:name="com.book.novel.model.remote.RemoteRepository"
+            android:name="com.book.novel.model.remote.RemoteImpl"
             android:value="IRemoteModule" />
         <activity
             android:name=".activity.MainActivity"
