--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,20 @@
         <meta-data
             android:name="com.book.novel.model.remote.RemoteImpl"
             android:value="IRemoteModule" />
+
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.BookDetailActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
