--- a/ireader/src/main/AndroidManifest.xml
+++ b/ireader/src/main/AndroidManifest.xml
@@ -1,1 +1,7 @@
-<manifest package="com.book.ireader" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.book.ireader">
+
+    <application>
+        <activity android:name=".ui.activity.ReadActivity" />
+    </application>
+</manifest>
