--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         <meta-data
             android:name="com.book.novel.model.remote.RemoteImpl"
             android:value="IRemoteModule" />
-
+        <provider
+            android:authorities="com.book.novel.MySuggestionProvider"
+            android:name=".provider.MySuggestionProvider" />
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
