--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:name=".NovelApplication"
         android:allowBackup="true"
         android:debuggable="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/book"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/book"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode"
@@ -26,8 +26,9 @@
             android:name="com.book.novel.model.remote.RemoteImpl"
             android:value="IRemoteModule" />
         <provider
-            android:authorities="com.book.novel.MySuggestionProvider"
-            android:name=".provider.MySuggestionProvider" />
+            android:name=".provider.MySuggestionProvider"
+            android:authorities="com.book.novel.MySuggestionProvider" />
+
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -35,7 +36,6 @@
             android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
