--- a/ireader/src/main/AndroidManifest.xml
+++ b/ireader/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.book.ireader">
 
     <application>
-        <activity android:name=".ui.activity.ReadActivity" />
+        <activity android:name=".ui.activity.ReadActivity"  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.MoreSettingActivity" android:screenOrientation="portrait"/>
     </application>
 </manifest>
