--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.book.novel">
+    package="com.lereader.novel">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name=".NovelApplication"
+        android:name="com.book.novel.NovelApplication"
         android:allowBackup="true"
         android:debuggable="true"
         android:icon="@mipmap/book"
@@ -26,11 +26,11 @@
             android:name="com.book.novel.model.remote.RemoteImpl"
             android:value="IRemoteModule" />
         <provider
-            android:name=".provider.MySuggestionProvider"
+            android:name="com.book.novel.provider.MySuggestionProvider"
             android:authorities="com.book.novel.MySuggestionProvider" />
 
         <activity
-            android:name=".activity.MainActivity"
+            android:name="com.book.novel.activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden">
@@ -44,10 +44,10 @@
                 android:resource="@xml/searchable" />
             <meta-data
                 android:name="android.app.default_searchable"
-                android:value=".activity.SearchActivity" />
+                android:value="com.book.novel.activity.SearchActivity" />
         </activity>
         <activity
-            android:name=".activity.BookDetailActivity"
+            android:name="com.book.novel.activity.BookDetailActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="com.book.novel.activity.BookDetailActivity" />
@@ -55,7 +55,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.SearchActivity"
+            android:name="com.book.novel.activity.SearchActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTop"
@@ -71,7 +71,7 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name=".activity.AboutActivity"
+            android:name="com.book.novel.activity.AboutActivity"
             android:screenOrientation="portrait" />
     </application>
 
