--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'com.google.code.gson:gson:2.8.4'
-    implementation 'net.zetetic:android-database-sqlcipher:3.5.9@aar'
+//    implementation 'net.zetetic:android-database-sqlcipher:3.5.9@aar'
     implementation 'com.wang.avi:library:2.1.3'
 
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
