--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "lereader-${variant.buildType.name}-${variant.versionName}.apk"
+        }
+    }
 }
 
 dependencies {
